--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.4",
+    "@angular/cli": "^1.4.5",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
@@ -44,6 +44,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-safari-launcher": "^1.0.0",
     "protractor": "~5.1.2",
+    "source-map-explorer": "^1.5.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
