--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ cache:
   directories:
     - "node_modules"
   yarn: true
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
