--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ cache:
     - "node_modules"
   yarn: true
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
