--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - sleep 3
+after_success:
+- yarn run build
 deploy:
   provider: s3
   access_key_id: AKIAJEU4IY3RF52QMP7A
